tests/language_modules/07_string/valid/string_replace.vf
module StringReplace

function label() returns String
is
    return String.replace("vera-flow", "-", "")
end label

end StringReplace