tests/language_modules/07_string/invalid_semantics/string_concat_argument_type.vf
module StringConcatArgumentType

function label() returns String
is
    return String.concat("vera", 1)
end label

end StringConcatArgumentType